# mh-gdpr-ai.eu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  demo.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/landing/: index.html
examples/: basic_routing.py  fastapi_integration.py  pii_detection.py
sdk/python/: README.md  pyproject.toml
sdk/python/ai_infra/: __init__.py  chat.py  client.py  exceptions.py  models.py  retry.py  security.py  telemetry.py
sdk/python/examples/: cost_tracking.py  migration.py  quickstart.py  sovereign.py  streaming.py
sdk/python/tests/: conftest.py
sdk/python/tests/unit/: test_chat.py  test_client.py  test_exceptions.py  test_models.py  test_retry.py  test_security.py  test_telemetry.py
sdk/typescript/: README.md  package.json  tsconfig.json  vitest.config.ts
sdk/typescript/examples/: cost_tracking.ts  quickstart.ts  sovereign.ts  streaming.ts
sdk/typescript/src/: chat.ts  client.ts  errors.ts  index.ts  models.ts  retry.ts  security.ts  telemetry.ts  types.ts
sdk/typescript/tests/: client.test.ts  errors.test.ts  models.test.ts  retry.test.ts  security.test.ts  telemetry.test.ts
sovereign_gateway/: __init__.py  __main__.py  gateway.py
sovereign_gateway/models/: __init__.py  schemas.py
sovereign_gateway/pii/: __init__.py  detector.py  masker.py
sovereign_gateway/providers/: __init__.py  openai_compat.py
sovereign_gateway/router/: __init__.py  sovereign.py
tests/: conftest.py  test_complete.py  test_masker.py  test_pii_detector.py  test_sovereign_router.py
