[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mh-gdpr-ai"
version = "0.1.0"
description = "GDPR-compliant LLM routing with real-time PII detection. Detects personal data in prompts and forces EU-only routing automatically."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "MH GDPR AI", email = "mahadillah@mh-gdpr-ai.eu" },
]
keywords = [
    "gdpr", "pii", "llm", "routing", "compliance",
    "eu", "ai", "gateway", "privacy", "sovereign",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "structlog>=23.0",
]

[project.optional-dependencies]
presidio = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
all = [
    "mh-gdpr-ai[presidio,api,dev]",
]

[project.urls]
Homepage = "https://github.com/mh-gdpr-ai/mh-gdpr-ai.eu"
Documentation = "https://github.com/mh-gdpr-ai/mh-gdpr-ai.eu#readme"
Repository = "https://github.com/mh-gdpr-ai/mh-gdpr-ai.eu"
Issues = "https://github.com/mh-gdpr-ai/mh-gdpr-ai.eu/issues"

[tool.hatch.build.targets.wheel]
packages = ["sovereign_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
